Fix table overflow when description is too large

--- a/resources/assets/scss/main.scss
+++ b/resources/assets/scss/main.scss
@@ -269,3 +269,7 @@
 .wickedpicker {
   z-index: 1000 !important;
 }
+
+.c-table__cell {
+  white-space: inherit;
+}
